# TysmEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  cmake-kits.json  release.bat  release.sh  run.bat  run.sh  vcpkg.json
.cache/clangd/index/: engine.cpp.92484B3165582221.idx  log.cpp.F7770695B4A9654A.idx  log.hpp.555A4B91804ABBD4.idx  main.cpp.5580205169C66719.idx
DevRef/: Tysm.xmind  tysm-game.mdj  tysm.drawio
DevRef/source/editor/resource/: PiccoloEditor.aps
dynamicLib/: README.md
game/: CMakeLists.txt  sdl2-config.cmake
game/main/: game.cpp  game.hpp  ico.rc  main.cpp  start_scene.cpp  start_scene.hpp
game/main/resource/: tysm_icon.aseprite
game/runtime/: CMakeLists.txt  engine.cpp  engine.hpp  sdl2-config.cmake
game/runtime/core/log/: log_system.cpp  log_system.hpp
game/runtime/function/framework/: command.hpp  object.cpp  object.hpp  scene.hpp  start_scene.cpp  start_scene.hpp
game/runtime/function/render/: image.cpp  image.hpp  render_system.cpp  render_system.hpp  text.cpp  text.hpp  window_system.cpp  window_system.hpp
game/runtime/function/ui/: button.cpp  button.hpp  img.cpp  img.hpp  ui.cpp  ui.hpp  ui_text.cpp  ui_text.hpp  view.hpp
src/: CMakeLists.txt  class.mmd  flow.mmd  ico.rc  main.cpp
src/core/: CMakeLists.txt  config.hpp  engine.cpp  engine.hpp  log.cpp  log.hpp
src/core/audio/: audio.cpp
src/core/input/: event_manager.cpp  event_manager.hpp
src/core/log/: log.hpp
src/core/render/: render_helper.cpp  renderer_manager.cpp  renderer_manager.hpp  window_manager.cpp  window_manager.hpp
src/core/test/: test_view.cpp  test_view.hpp
src/core/ui/: button.cpp  button.hpp  container.cpp  container.hp  container.hpp  image.cpp  image.hpp  text.cpp  text.hpp  ty_object.cpp  ty_object.hpp
src/core/utils/: canvas_data.hpp  coordinate_convert.cpp  deleter.cpp  deleter.hpp  timer.cpp  timer.hpp  vec2.hpp
src/core/view/: IView.hpp  dialog_view.cpp  dialog_view.hpp  iview.hpp  title_view.cpp  title_view.hpp  view_base.cpp  view_base.hpp  view_manager.cpp  view_manager.hpp
